modified bay helper html

--- a/javascript/javascript2/week1/index.html
+++ b/javascript/javascript2/week1/index.html
@@ -8,7 +8,17 @@
   />
 </head>
 <body>
-  <main></main>
+  
+    
+      <div class="hyfbay">
+      <main>
+      
+      <div class="Tasks">
+        <h1 class="headlines">hyfBayHelpers</h1>
+        <script src="hyfBayHelpers.js"></script>
+        <script src="main.js"></script>
+      </div></main>
+  
 
   <script src="hyfBayHelpers.js"></script>
   <script src="main.js"></script>
